tests/transpiler/x/clj/avg_builtin.clj
;; Generated by Mochi v0.10.31 on 2025-07-20 09:40:56 GMT+7
(ns main)

(defn -main []
  (println (avg [1 2 3])))

(-main)
